[package]
name = "top-book"
version = "0.1.0"
edition = "2021"
authors = ["Rodolfo Araujo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = [
    "io-std", "io-util", "rt-multi-thread", "macros", "sync",
] }
url = "2.2.2"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
